[workspace]

members = ["derive", "lib"]

[workspace.package]
version = "0.1.0-alpha"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
homepage = "https://github.com/rust-utility/cmake-parser"
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rust-utility/cmake-parser"

[workspace.dependencies]
cmake-parser-derive = { version = "0.1.0-alpha", path = "derive" }
cmake-parser = { version = "0.1.0-alpha", path = "lib" }
