[package]
name = "cmake-parser-derive"
description = """
The derive macros to parse cmake language using cmake-parser library.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1"
inflections = "1.1.1"

# [dev-dependencies]
# cmake-parser = { workspace = true }
